[package]
name = "dmaio"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = { version = "0.3", features = [
    "ioapiset",
    "fileapi",
    "mswsock",
    "winsock2",
    "minwinbase",
    "handleapi",
    "impl-default",
    "memoryapi",
    "errhandlingapi",
    "sysinfoapi"
] }
async-task = "3"
lock_api = "0.3"

[features]
default = ["std"]
std = []
